Fix spacing in login template

--- a/application/views/enigma/login/css/template.css
+++ b/application/views/enigma/login/css/template.css
@@ -2,7 +2,7 @@
 	width: 400px;
 	margin: auto auto 12px auto;
 	border-radius: 0;
-	padding: 20px 20px 6px 20px;
+	padding: 15px 20px 6px 20px;
 }
 
 .login.content > :first-child {
